<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/newChecklistTabLayout"
        android:layout_width="409dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/prepTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepTab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/assemblyTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assemblyTab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/calibrationTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibrationTab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/supplyTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplyTab" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>