<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/prepTabFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/o2_dates_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="306dp"
        android:layout_marginBottom="662dp"
        android:text="@string/o2_cell_dates"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cell1"
        android:layout_width="94dp"
        android:layout_height="43dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="651dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cell1_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cell2"
        app:layout_constraintStart_toEndOf="@+id/o2_dates_label"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="mm/dd" />

    <EditText
        android:id="@+id/cell2"
        android:layout_width="94dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="651dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cell2_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cell3"
        app:layout_constraintStart_toEndOf="@+id/cell1"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="mm/dd" />

    <EditText
        android:id="@+id/cell3"
        android:layout_width="94dp"
        android:layout_height="43dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="651dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cell3_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cell2"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="mm/dd" />

    <TextView
        android:id="@+id/mV_range_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="79dp"
        android:text="@string/air_mv_range_9_13"
        app:layout_constraintBottom_toTopOf="@+id/calculated_mvo2_label"
        app:layout_constraintEnd_toStartOf="@+id/mV_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cell1" />

    <EditText
        android:id="@+id/mV_1"
        android:layout_width="53dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="67dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/mv_1"
        app:layout_constraintBottom_toTopOf="@+id/calculated_mvo2_label"
        app:layout_constraintStart_toEndOf="@+id/mV_range_label"
        app:layout_constraintTop_toBottomOf="@+id/cell1" />

    <EditText
        android:id="@+id/mV_2"
        android:layout_width="53dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/mv_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mV_1"
        app:layout_constraintTop_toBottomOf="@+id/cell2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/mV_3"
        android:layout_width="53dp"
        android:layout_height="45dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="527dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/mv_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mV_2"
        app:layout_constraintTop_toBottomOf="@+id/cell3" />

    <TextView
        android:id="@+id/calculated_mvo2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="67dp"
        android:layout_marginBottom="461dp"
        android:text="@string/mvo2_mv_21xfo2_21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mV_1" />

    <TextView
        android:id="@+id/calculated_voltage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cv1"
        android:textColor="#E31212"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="293dp" />

    <TextView
        android:id="@+id/calculated_voltage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cv2"
        android:textColor="#E31212"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="293dp" />

    <TextView
        android:id="@+id/calculated_voltage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cv3"
        android:textColor="#E31212"
        tools:layout_editor_absoluteX="333dp"
        tools:layout_editor_absoluteY="294dp" />

</androidx.constraintlayout.widget.ConstraintLayout>